# IgDiscover-legacy

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  CITATION  LICENSE  MANIFEST.in  README.rst  Snakefile  bitbucket-pipelines.yml  blastiger.py  databases  environment.lock.yml  environment.yml  igblastparallel.py  pipeline.conf  pyproject.toml  requirements.txt  runtest.sh  setup.cfg  setup.py  splitbybarcode.py  tox.ini
doc/: Makefile  advanced.rst  conf.py  develop.rst  faq.rst  guide.rst  index.rst  installation.rst  manual-installation.rst  testing.rst
docs/: conf.py  guide.rst  index.rst  installation.rst  test.rst  testing.rst
igdiscover/: Snakefile  __init__.py  __main__.py  _version.py  align.py  clonoquery.py  clonotypes.py  cluster.py  clusterplot.py  commonv.py  compose.py  config.py  count.py  dbdiff.py  dendrogram.py  dereplicate.py  discover.py  discoverj.py  discoverjd.py  dna.py  errorplot.py  filter.py  germlinefilter.py  group.py  haplotype.py  igblast.py  igdiscover.yaml  init.py  merge.py  multidiscover.py  parse.py  plotalleles.py  readlenhistogram.py  rename.py  run.py  species.py  table.py  trie.py  unbarcode.py  union.py  (+2 more)
igypipe/: Snakefile  __init__.py  __main__.py  cluster.py  clusterplot.py  commonv.py  compose.py  construct.py  count.py  dendrogram.py  discover.py  errorplot.py  filter.py  group.py  igblast.py  igypipe.py  igypipe.yaml  init.py  multidiscover.py  parse.py  pipeline.conf  rename.py  singledisco.py  table.py  union.py  upstream.py  utils.py
misc/: Singularity  bubbles.py  uniq.py  (+11 more)
(+97 files in other folders)
