[metadata]
name = igdiscover
author = Marcel Martin
author_email = marcel.martin@scilifelab.se
url = https://igdiscover.se/
description = Analyze antibody repertoires and discover new V genes
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
project_urls =
    Changelog = http://docs.igdiscover.se/en/stable/changes.html
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
# No "install_requires" here, dependencies are managed
# through Conda in environment.yml

[options.packages.find]
where = src

[options.package_data]
igdiscover = igdiscover.yaml, Snakefile, empty.aux

[options.entry_points]
console_scripts =
    igdiscover = igdiscover.__main__:main

[tool:pytest]
addopts = --doctest-modules
testpaths = src/ tests/
